fix cover-text2 to obstruct less of the hero image on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,7 +370,7 @@ iframe {
     
     #cover-text2 {
         font-size: 125%;
-        top: 350px;
+        top: 375px;
     }
 
     .text-content-right, .img-content-right, .mov-content-right {
